@@ -1,3 +1,8 @@
+2015-02-02 Riccardo Mottola <rm@gnu.org>
+
+	* gshisen.m
+	Get username from environment.
+
 2015-01-31 Riccardo Mottola <rm@gnu.org>
 
 	* board.m
